--- a/local/local_settings.py.example
+++ b/local/local_settings.py.example
@@ -15,8 +15,10 @@ DATABASES = {
 
 CACHE_BACKEND = 'dummy://'
 
-NOVA_DEFAULT_ENDPOINT = 'http://localhoat:8773/services/Cloud'
+NOVA_DEFAULT_ENDPOINT = 'http://localhost:8773/services/Cloud'
 NOVA_DEFAULT_REGION = 'nova'
 NOVA_ACCESS_KEY = 'admin'
 NOVA_SECRET_KEY = 'admin'
+NOVA_ADMIN_USER = 'admin'
+NOVA_PROJECT = 'admin'
 
