--- a/local/local_settings.py.example
+++ b/local/local_settings.py.example
@@ -9,7 +9,7 @@ LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(LOCAL_PATH, 'dashboard_openstack'),
+        'NAME': os.path.join(LOCAL_PATH, 'dashboard_openstack.sqlite3'),
     },
 }
 
