--- a/.bzrignore
+++ b/.bzrignore
@@ -5,6 +5,7 @@ django-nova/downloads/
 django-nova/eggs/
 django-nova/parts/
 django-nova/src/django_nova.egg-info
+django-nova-syspanel/src/django_nova_syspanel.egg-info
 openstack-dashboard/.dashboard-venv
 openstack-dashboard/local/dashboard_openstack.sqlite3
 openstack-dashboard/local/local_settings.py
