--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts = python django
 develop = .
-eggs = django-nova
+eggs = django-openstack
 
 [python]
 recipe = zc.recipe.egg
@@ -11,9 +11,9 @@ eggs = ${buildout:eggs}
 [django]
 recipe = djangorecipe
 version = 1.2.4
-project = django_nova
-projectegg = django_nova
+project = django_openstack
+projectegg = django_openstack
 settings = testsettings
-test = django_nova
+test = django_openstack
 eggs = ${buildout:eggs}
 
