--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -21,50 +21,16 @@ CACHE_BACKEND = 'dummy://'
 # EMAIL_HOST_USER = 'djangomail'
 # EMAIL_HOST_PASSWORD = 'top-secret!'
 
-NOVA_DEFAULT_ENDPOINT = 'http://localhost:8773/services/Cloud'
-NOVA_DEFAULT_REGION = 'nova'
-NOVA_ACCESS_KEY = 'admin'
-NOVA_SECRET_KEY = 'admin'
-NOVA_ADMIN_USER = 'admin'
-NOVA_PROJECT = 'admin'
+OPENSTACK_ADMIN_TOKEN = "999888777666"
+OPENSTACK_KEYSTONE_URL = "http://localhost:8080/v2.0/"
 
-# Configure these for your outgoing email host
-# EMAIL_HOST = 'smtp.my-company.com'
-# EMAIL_PORT = 25
-## EMAIL_HOST_USER = 'djangomail'
-## EMAIL_HOST_PASSWORD = 'top-secret!'
+# If you have external monitoring links
+EXTERNAL_MONITORING = [
+    ['Nagios','http://foo.com'],
+    ['Ganglia','http://bar.com'],
+]
 
-# Uncomment the following segment to silence most logging
-# django.db and boto DEBUG logging is extremely verbose.
-#LOGGING = {
-#        'version': 1,
-#        # set to True will disable all logging except that specified, unless
-#        # nothing is specified except that django.db.backends will still log,
-#        # even when set to True, so disable explicitly
-#        'disable_existing_loggers': False,
-#        'handlers': {
-#            'null': {
-#                'level': 'DEBUG',
-#                'class': 'django.utils.log.NullHandler',
-#                },
-#            'console': {
-#                'level': 'DEBUG',
-#                'class': 'logging.StreamHandler',
-#                },
-#            },
-#        'loggers': {
-#            # Comment or Uncomment these to turn on/off logging output
-#            'django.db.backends': {
-#                'handlers': ['null'],
-#                'propagate': False,
-#                },
-#            'boto': {
-#                'handlers': ['null'],
-#                'propagate': False,
-#                },
-#            'django_openstack': {
-#                'handlers': ['null'],
-#                'propagate': False,
-#            },
-#        }
-#}
+# If you do not have external monitoring links
+# EXTERNAL_MONITORING = []
+
+TOTAL_CLOUD_RAM_GB = 10
