Working to get tests working
buildout config updated, deprecated tests removed, deprecated imports
removed

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -16,7 +16,7 @@ eggs = ${buildout:eggs}
 recipe = djangorecipe
 project = django_openstack
 projectegg = django_openstack
-settings = testsettings
+settings = tests.testsettings
 test = django_openstack
 eggs = ${buildout:eggs}
 
