Adds django_mailer and a presence check for it

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = python django
+parts = python django django-mailer
 develop = .
 eggs = django-openstack
 versions = versions
@@ -20,3 +20,6 @@ settings = tests.testsettings
 test = django_openstack
 eggs = ${buildout:eggs}
 
+[django-mailer]
+recipe = zc.recipe.egg
+eggs = django-mailer
