Switching to nosetests runner, moving broken tests to a non-module dir, adding dependency_tests

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -19,7 +19,10 @@ projectegg = django_openstack
 settings = tests.testsettings
 test = django_openstack
 eggs = ${buildout:eggs}
+extra-paths =
+    ${buildout:directory}/parts/django-mailer
 
 [django-mailer]
-recipe = zc.recipe.egg
-eggs = django-mailer
+recipe = zerokspot.recipe.git
+repository = git://github.com/jtauber/django-mailer.git
+as_egg = True
