--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -21,6 +21,9 @@ EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
 # Or send them to /dev/null
 #EMAIL_BACKEND = 'django.core.mail.backends.dummy.EmailBackend'
 
+# django-mailer uses a different settings attribute
+MAILER_EMAIL_BACKEND = EMAIL_BACKEND
+
 # Configure these for your outgoing email host
 # EMAIL_HOST = 'smtp.my-company.com'
 # EMAIL_PORT = 25
