First test implemented, and buildout changes to allow unit test to run

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ django-openstack/bin
 django-openstack/develop-eggs/
 django-openstack/downloads/
 django-openstack/eggs/
+django-openstack/launchpad
 django-openstack/parts/
 django-openstack/django_nova.egg-info
 django-openstack/django_openstack.egg-info
