--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = python django django-mailer
+parts = python django django-mailer launchpad openstack-compute openstackx
 develop = .
 eggs = django-openstack
 versions = versions
@@ -16,13 +16,31 @@ eggs = ${buildout:eggs}
 recipe = djangorecipe
 project = django_openstack
 projectegg = django_openstack
-settings = tests.testsettings
+settings = tests
 test = django_openstack
 eggs = ${buildout:eggs}
 extra-paths =
     ${buildout:directory}/parts/django-mailer
+    ${buildout:directory}/parts/openstack-compute
+    ${buildout:directory}/parts/openstackx
+    ${buildout:directory}/launchpad/glance
 
 [django-mailer]
 recipe = zerokspot.recipe.git
 repository = git://github.com/jtauber/django-mailer.git
 as_egg = True
+
+[openstack-compute]
+recipe = zerokspot.recipe.git
+repository = git://github.com/jacobian/openstack.compute.git
+as_egg = True
+
+[openstackx]
+recipe = zerokspot.recipe.git
+repository = git://github.com/cloudbuilders/openstackx.git
+as_egg = True
+
+[launchpad]
+recipe = bazaarrecipe
+urls = 
+   https://launchpad.net/~hudson-openstack/glance/trunk/ glance
