--- a/django-openstack/debian/control
+++ b/django-openstack/debian/control
@@ -10,8 +10,15 @@ Package: django-openstack
 Architecture: all
 Homepage: https://github.com/4P/openstack-dashboard
 XB-Python-Version: ${python:Versions}
-Depends: ${misc:Depends}, ${python:Depends}
+Depends: ${misc:Depends},
+ python-django (=1.3-2),
+ python-glance,
+ python-boto,
+ python-dateutil,
+ openstackx,
+ ${python:Depends}
 Description: Blah python module that adds blah and bleh
  Here you should put a long description your package. This line *MUST* (this is
  for default printing) begin with a single space.
  Look for more information about this.
+
