Add cloudfiles to buildout

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -1,5 +1,12 @@
 [buildout]
-parts = python django django-mailer launchpad openstack-compute openstackx
+parts = 
+   django
+   django-mailer
+   launchpad
+   openstack-compute
+   openstackx
+   python
+   python-cloudfiles
 develop = .
 eggs = django-openstack
 versions = versions
@@ -20,10 +27,11 @@ settings = tests
 test = django_openstack
 eggs = ${buildout:eggs}
 extra-paths =
+    ${buildout:directory}/launchpad/glance
     ${buildout:directory}/parts/django-mailer
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
-    ${buildout:directory}/launchpad/glance
+    ${buildout:directory}/parts/python-cloudfiles
 
 [django-mailer]
 recipe = zerokspot.recipe.git
@@ -38,6 +46,11 @@ as_egg = True
 [openstackx]
 recipe = zerokspot.recipe.git
 repository = git://github.com/cloudbuilders/openstackx.git
+as_egg = True
+
+[python-cloudfiles]
+recipe = zerokspot.recipe.git
+repository = git://github.com/rackspace/python-cloudfiles.git
 as_egg = True
 
 [launchpad]
