--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = 
+parts =
    django
    launchpad
    openstack-compute
@@ -23,10 +23,11 @@ webob = 1.0.8
 # dependencies that are found locally ${buildout:directory}/module
 # or can be fetched from pypi
 recipe = zc.recipe.egg
-eggs = 
+eggs =
     django-mailer
     httplib2
     python-cloudfiles
+    coverage
 interpreter = python
 
 
@@ -93,17 +94,17 @@ as_egg = True
 ## Dependencies fetched from launchpad
 # launchpad dependencies will appear as subfolders of
 # ${buildout:directory}/launchpad/
-# multiple urls can be specified, format is 
+# multiple urls can be specified, format is
 # branch_url subfolder_name
 # don't forget to add directory to extra_paths in [django]
 [launchpad]
 recipe = bazaarrecipe
-urls = 
+urls =
    https://launchpad.net/~hudson-openstack/glance/trunk/ glance
 
 
 ## Dependencies fetch from other bzr locations
 #[bzrdeps]
 #recipe = bazaarrecipe
-#urls = 
+#urls =
 #   https://launchpad.net/~hudson-openstack/glance/trunk/ glance
