--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -76,6 +76,7 @@ extra-paths =
     ${buildout:directory}/launchpad/glance
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
+    ${buildout:directory}/parts/python-novaclient
 
 
 ## Dependencies fetch from git
@@ -90,6 +91,10 @@ recipe = zerokspot.recipe.git
 repository = git://github.com/cloudbuilders/openstackx.git
 as_egg = True
 
+[python-novaclient]
+recipe = zerokspot.recipe.git
+repository = git://github.com/rackspace/python-novaclient.git
+as_egg = True
 
 ## Dependencies fetched from launchpad
 # launchpad dependencies will appear as subfolders of
