updating requires and dependencies for Glance and Quantum to git from LP

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -28,6 +28,7 @@ eggs =
     httplib2
     python-cloudfiles
     coverage
+    glance
 interpreter = python
 
 
@@ -73,7 +74,6 @@ eggs =
    ${django-openstack:eggs}
    ${glance-dependencies:eggs}
 extra-paths =
-    ${buildout:directory}/launchpad/glance
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
     ${buildout:directory}/parts/python-novaclient
