--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -31,9 +31,8 @@ MAILER_EMAIL_BACKEND = EMAIL_BACKEND
 # EMAIL_HOST_PASSWORD = 'top-secret!'
 
 
-OPENSTACK_ADMIN_TOKEN = "999888777666"
 OPENSTACK_KEYSTONE_URL = "http://localhost:5000/v2.0/"
-OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
+OPENSTACK_KEYSTONE_DEFAULT_ROLE_ID = "2"
 
 # NOTE(tres): Available services should come from the service
 #             catalog in Keystone.
@@ -88,3 +87,6 @@ EXTERNAL_MONITORING = [
 
 # How much ram on each compute host?
 COMPUTE_HOST_RAM_GB = 16
+
+# Is keystone management enabled? (experimental)
+KEYSTONE_MANAGE_ENABLED = False
