--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -32,6 +32,9 @@ MAILER_EMAIL_BACKEND = EMAIL_BACKEND
 
 
 OPENSTACK_KEYSTONE_URL = "http://localhost:5000/v2.0/"
+# FIXME: this is only needed until keystone fixes its GET /tenants call
+# so that it doesn't return everything for admins
+OPENSTACK_KEYSTONE_ADMIN_URL = "http://localhost:5001/v2.0"
 OPENSTACK_KEYSTONE_DEFAULT_ROLE_ID = "2"
 
 # NOTE(tres): Available services should come from the service
@@ -87,6 +90,3 @@ EXTERNAL_MONITORING = [
 
 # How much ram on each compute host?
 COMPUTE_HOST_RAM_GB = 16
-
-# Is keystone management enabled? (experimental)
-KEYSTONE_MANAGE_ENABLED = False
