--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -35,7 +35,7 @@ OPENSTACK_KEYSTONE_URL = "http://localhost:5000/v2.0/"
 # FIXME: this is only needed until keystone fixes its GET /tenants call
 # so that it doesn't return everything for admins
 OPENSTACK_KEYSTONE_ADMIN_URL = "http://localhost:5001/v2.0"
-OPENSTACK_KEYSTONE_DEFAULT_ROLE_ID = "2"
+OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 
 # NOTE(tres): Available services should come from the service
 #             catalog in Keystone.
