--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -96,6 +96,11 @@ recipe = zerokspot.recipe.git
 repository = git://github.com/rackspace/python-novaclient.git
 as_egg = True
 
+[python-novaclient]
+recipe = zerokspot.recipe.git
+repository = git://github.com/4P/python-keystoneclient.git
+as_egg = True
+
 ## Dependencies fetched from launchpad
 # launchpad dependencies will appear as subfolders of
 # ${buildout:directory}/launchpad/
