--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -77,6 +77,7 @@ extra-paths =
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
     ${buildout:directory}/parts/python-novaclient
+    ${buildout:directory}/parts/python-keystoneclient
 
 
 ## Dependencies fetch from git
@@ -96,7 +97,7 @@ recipe = zerokspot.recipe.git
 repository = git://github.com/rackspace/python-novaclient.git
 as_egg = True
 
-[python-novaclient]
+[python-keystoneclient]
 recipe = zerokspot.recipe.git
 repository = git://github.com/4P/python-keystoneclient.git
 as_egg = True
