Fixes LP bug 882189 -- Adds paging support to swift API calls.

--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -37,6 +37,8 @@ OPENSTACK_KEYSTONE_URL = "http://localhost:5000/v2.0/"
 OPENSTACK_KEYSTONE_ADMIN_URL = "http://localhost:35357/v2.0"
 OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 
+SWIFT_PAGINATE_LIMIT = 100
+
 # Configure quantum connection details for networking
 QUANTUM_ENABLED = True
 QUANTUM_URL = '127.0.0.1'
