--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ django-nova-syspanel/src/django_nova_syspanel.egg-info
 openstack-dashboard/.dashboard-venv
 openstack-dashboard/local/dashboard_openstack.sqlite3
 openstack-dashboard/local/local_settings.py
+build/
+doc/source/sourcecode
