Buildout correctly installs novaclient and keystoneclient.
Fixes bug 884392.

Change-Id: I3c330ae67f5808724da1bb3f3ebc5a4d18e2d3ad

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -4,6 +4,8 @@ parts =
    launchpad
    openstack-compute
    openstackx
+   python-novaclient
+   python-keystoneclient
 develop = .
 versions = versions
 
