Adds quantum and kombu to buildout.
Fixes bug 884422. With this fix you can run bin/buildout followed by python bin/test and actually have the tests run.

Change-Id: Ia57d3ae10ce188373d02bb4372f7a63815d9c20f

--- a/django-openstack/buildout.cfg
+++ b/django-openstack/buildout.cfg
@@ -31,6 +31,7 @@ eggs =
     python-cloudfiles
     coverage
     glance
+    quantum
 interpreter = python
 
 
@@ -44,6 +45,7 @@ eggs =
    argparse
    eventlet
    greenlet
+   kombu
    paste
    pep8
    routes
