--- a/horizon/buildout.cfg
+++ b/horizon/buildout.cfg
@@ -6,6 +6,7 @@ parts =
    openstackx
    python-novaclient
    python-keystoneclient
+   seleniumrc
 develop = .
 versions = versions
 
@@ -33,6 +34,8 @@ eggs =
     coverage
     glance
     quantum
+    django-nose-selenium
+    CherryPy
 interpreter = python
 
 
@@ -124,3 +127,7 @@ urls =
 #recipe = bazaarrecipe
 #urls =
 #   https://launchpad.net/~hudson-openstack/glance/trunk/ glance
+
+
+[seleniumrc]
+recipe=collective.recipe.seleniumrc
