--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -10,6 +10,7 @@ DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
         'NAME': os.path.join(LOCAL_PATH, 'dashboard_openstack.sqlite3'),
+        'TEST_NAME': os.path.join(LOCAL_PATH, 'test.sqlite3'),
     },
 }
 
@@ -94,6 +95,10 @@ LOGGING = {
                 'handlers': ['console'],
                 'propagate': False,
             },
+            'nose.plugins.manager': {
+                'handlers': ['console'],
+                'propagate': False,
+            }
         }
 }
 
