--- a/horizon/buildout.cfg
+++ b/horizon/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
+download-cache = /tmp/.buildout_cache/
 parts =
    django
-   launchpad
    openstack-compute
    openstackx
    python-novaclient
@@ -14,12 +14,14 @@ versions = versions
 [versions]
 django = 1.3
 # the following are for glance-dependencies
-eventlet = 0.9.12
 greenlet = 0.3.1
+eventlet = 0.9.12
 pep8 = 0.5.0
 sqlalchemy = 0.6.3
 sqlalchemy-migrate = 0.6
 webob = 1.0.8
+glance = 2011.3
+pycrypto = 2.3
 
 
 [dependencies]
@@ -36,27 +38,7 @@ eggs =
     quantum
     django-nose-selenium
     CherryPy
-interpreter = python
-
-
-# glance doesn't have a client, and installing
-# from bzr doesn't install deps
-[glance-dependencies]
-recipe = zc.recipe.egg
-eggs =
-   PasteDeploy
-   anyjson
-   argparse
-   eventlet
-   greenlet
-   kombu
-   paste
-   pep8
-   routes
-   sqlalchemy
-   sqlalchemy-migrate
-   webob
-   xattr
+    pycrypto
 interpreter = python
 
 
@@ -80,7 +62,6 @@ test = horizon
 eggs =
    ${dependencies:eggs}
    ${horizon:eggs}
-   ${glance-dependencies:eggs}
 extra-paths =
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
@@ -95,38 +76,23 @@ recipe = zerokspot.recipe.git
 repository = git://github.com/jacobian/openstack.compute.git
 as_egg = True
 
+
 [openstackx]
 recipe = zerokspot.recipe.git
 repository = git://github.com/cloudbuilders/openstackx.git
 as_egg = True
+
 
 [python-novaclient]
 recipe = zerokspot.recipe.git
 repository = git://github.com/rackspace/python-novaclient.git
 as_egg = True
 
+
 [python-keystoneclient]
 recipe = zerokspot.recipe.git
 repository = git://github.com/4P/python-keystoneclient.git
 as_egg = True
-
-## Dependencies fetched from launchpad
-# launchpad dependencies will appear as subfolders of
-# ${buildout:directory}/launchpad/
-# multiple urls can be specified, format is
-# branch_url subfolder_name
-# don't forget to add directory to extra_paths in [django]
-[launchpad]
-recipe = bazaarrecipe
-urls =
-   https://launchpad.net/~hudson-openstack/glance/trunk/ glance
-
-
-## Dependencies fetch from other bzr locations
-#[bzrdeps]
-#recipe = bazaarrecipe
-#urls =
-#   https://launchpad.net/~hudson-openstack/glance/trunk/ glance
 
 
 [seleniumrc]
