Use separate backup environments for each job name.
Change-Id: I0d7d4fcd1b6d1d96c8a82dc2a1e983c2b0986475

--- a/horizon/buildout.cfg
+++ b/horizon/buildout.cfg
@@ -1,6 +1,5 @@
 [buildout]
 download-cache = /tmp/.buildout_cache/
-relative-paths = true
 parts =
    django
    openstack-compute
@@ -43,6 +42,26 @@ eggs =
 interpreter = python
 
 
+# glance doesn't properly list it's dependencies, so we have to install them
+[glance-dependencies]
+recipe = zc.recipe.egg
+eggs =
+   PasteDeploy
+   anyjson
+   argparse
+   eventlet
+   greenlet
+   kombu
+   paste
+   pep8
+   routes
+   sqlalchemy
+   sqlalchemy-migrate
+   webob
+   xattr
+interpreter = python
+
+
 [horizon]
 recipe = zc.recipe.egg
 eggs = horizon
@@ -63,6 +82,7 @@ test = horizon
 eggs =
    ${dependencies:eggs}
    ${horizon:eggs}
+   ${glance-dependencies:eggs}
 extra-paths =
     ${buildout:directory}/parts/openstack-compute
     ${buildout:directory}/parts/openstackx
