Various fixes for swift UI.
Paging controls no longer show when there are exactly "limit" number items.
Primary actions more clear.
Styles in-line with rest of Horizon.
Filter form now pages plus some test fixes.
Better Swift pagination limit default and comment in local_settings.py

Change-Id: I288c17471624c3a90a886726af60f7c3c8f8c9b7

--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -43,7 +43,9 @@ OPENSTACK_KEYSTONE_URL = "http://%s:5000/v2.0" % OPENSTACK_HOST
 OPENSTACK_KEYSTONE_ADMIN_URL = "http://%s:35357/v2.0" % OPENSTACK_HOST
 OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 
-SWIFT_PAGINATE_LIMIT = 100
+# The number of Swift containers and objects to display on a single page before
+# providing a paging element (a "more" link) to paginate results.
+SWIFT_PAGINATE_LIMIT = 1000
 
 # Configure quantum connection details for networking
 QUANTUM_ENABLED = True
