Updated the other half of the quantum dependency and bumped env version.
Adds buildout environment automatic cleanout to "quiet" option for Jenkins.

Change-Id: I23c6849e893b9dc43ec93acfa402af60f33bc7b9

--- a/horizon/buildout.cfg
+++ b/horizon/buildout.cfg
@@ -4,6 +4,7 @@ parts =
    django
    openstack-compute
    openstackx
+   quantum
    python-novaclient
    python-keystoneclient
    seleniumrc
@@ -35,7 +36,6 @@ eggs =
     python-cloudfiles
     coverage
     glance
-    quantum
     django-nose-selenium
     CherryPy
     pycrypto
@@ -101,6 +101,13 @@ as_egg = True
 [openstackx]
 recipe = zerokspot.recipe.git
 repository = git://github.com/cloudbuilders/openstackx.git
+as_egg = True
+
+
+[quantum]
+recipe = zerokspot.recipe.git
+repository = git://github.com/openstack/quantum.git
+branch = stable/diablo
 as_egg = True
 
 
