Cleans up error handling for index view api calls. Prevents 500 errors.
Also brings buildout config for glance into line with pip-requires.

Fixes bug 893795.

Change-Id: Ia5cc1d480cf160c682a6ec7a3d0bed9057e7acc9

--- a/horizon/buildout.cfg
+++ b/horizon/buildout.cfg
@@ -3,6 +3,7 @@ download-cache = /tmp/.buildout_cache/
 parts =
    django
    openstackx
+   glance
    quantum
    python-novaclient
    python-keystoneclient
@@ -20,7 +21,6 @@ pep8 = 0.5.0
 sqlalchemy = 0.6.3
 sqlalchemy-migrate = 0.6
 webob = 1.0.8
-glance = 2011.3
 pycrypto = 2.3
 
 
@@ -33,7 +33,6 @@ eggs =
     httplib2
     python-cloudfiles
     coverage
-    glance
     django-nose-selenium
     CherryPy
     pycrypto
@@ -92,6 +91,12 @@ extra-paths =
 [openstackx]
 recipe = zerokspot.recipe.git
 repository = git://github.com/cloudbuilders/openstackx.git
+as_egg = True
+
+
+[glance]
+recipe = zerokspot.recipe.git
+repository = git://github.com/openstack/glance.git
 as_egg = True
 
 
