Converts nova.containers to use new tables, modals, etc.
Adds support for generic paging to tables, as well as various
improvements to the tables and actions APIs. Adds more data
to the container and object table displays to make them
more useful.

Change-Id: I6c7434657de4398a9da30911b281275d7c978d8b

--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -45,7 +45,7 @@ OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 
 # The number of Swift containers and objects to display on a single page before
 # providing a paging element (a "more" link) to paginate results.
-SWIFT_PAGINATE_LIMIT = 1000
+API_RESULT_LIMIT = 1000
 
 # Configure quantum connection details for networking
 QUANTUM_ENABLED = True
