--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -36,6 +36,14 @@ HORIZON_CONFIG = {
     'user_home': 'dashboard.views.user_home',
 }
 
+# For multiple regions uncomment this configuration, and add (title, endpoint).
+# AVAILABLE_REGIONS = [
+#     ('cluster1', 'http://cluster1.com:5000/v2.0'),
+#     ('cluster2', 'http://cluster2.com:5000/v2.0'),
+# ]
+
+# FIXME: This is only here so quantum still works. It must be refactored to
+# work with multiple regions.
 OPENSTACK_HOST = "127.0.0.1"
 OPENSTACK_KEYSTONE_URL = "http://%s:5000/v2.0" % OPENSTACK_HOST
 # FIXME: this is only needed until keystone fixes its GET /tenants call
