Improved region switcher.
Adds the ability to live-switch regions, and bakes in support at a
lower level. Cleans up login-related code.

Makes the login view capable of being used as a modal dialog.

Overall UX improvements for region support.

Fixes a bug where having one region would still show the region
switcher inappropriately. Fixed bug 929886.

BACKWARDS INCOMPATIBLE CHANGE: If you were an early adopter of
the region switcher, you will need to reverse the order of the
settings tuples from the previous ("region name", "endpoint")
order to the new ("endpoint", "region name") style. This change
was done to better suit Django's "choices" syntax since the
original ordering was arbitrary.

Change-Id: I79db4ec1e608ee0f35916966c018d2a76b5ff662

--- a/openstack-dashboard/local/local_settings.py.example
+++ b/openstack-dashboard/local/local_settings.py.example
@@ -36,10 +36,10 @@ HORIZON_CONFIG = {
     'user_home': 'dashboard.views.user_home',
 }
 
-# For multiple regions uncomment this configuration, and add (title, endpoint).
+# For multiple regions uncomment this configuration, and add (endpoint, title).
 # AVAILABLE_REGIONS = [
-#     ('cluster1', 'http://cluster1.com:5000/v2.0'),
-#     ('cluster2', 'http://cluster2.com:5000/v2.0'),
+#     ('http://cluster1.example.com:5000/v2.0', 'cluster1'),
+#     ('http://cluster2.example.com:5000/v2.0', 'cluster2'),
 # ]
 
 # FIXME: This is only here so quantum still works. It must be refactored to
