Ignoring .venv dir
Change-Id: I468eb603ba5376ada99a90cc565f7906afdfbd64

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ openstack-dashboard/local/dashboard_openstack.sqlite3
 openstack-dashboard/local/local_settings.py
 docs/build/
 docs/source/sourcecode
+.venv
