--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -1,5 +1,7 @@
 import os
 
+from django.utils.translation import ugettext_lazy as _
+
 DEBUG = True
 TEMPLATE_DEBUG = DEBUG
 PROD = False
@@ -7,6 +9,14 @@ USE_SSL = False
 
 # Note: You should change this value
 SECRET_KEY = 'elj1IWiLoWHgcyYxFVLj7cM5rGOOxWl0'
+
+# Specify a regular expression to validate user passwords.
+# HORIZON_CONFIG = {
+#     "password_validator": {
+#         "regex": '.*',
+#         "help_text": _("Your password does not meet the requirements.")
+#     }
+# }
 
 LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
 
