--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include docs *.py *.rst *.css *.js *.html *.conf
+recursive-include docs *.py *.rst *.css *.js *.html *.conf *.jpg *.gif *.png *.css_t
 recursive-include horizon *.html *.js *.csv *.template *.mo *.po
 recursive-include openstack_dashboard *.html *.js *.css *.less *.csv *.template *.mo *.po *.example *.eot *.svg *.ttf *.woff *.png *.gif *.ico *.wsgi
 recursive-include tools *.py *.sh
