Move to python-glanceclient.
This depends on https://review.openstack.org/#/c/6506/ for image
filtering support. Do not merge this until that has been merged.

Change-Id: I12e420f153b7b8323956e741bf9a202e31daa3b5

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -101,11 +101,19 @@ LOGGING = {
                 'handlers': ['console'],
                 'propagate': False,
             },
+            'openstack_dashboard': {
+                'handlers': ['console'],
+                'propagate': False,
+            },
             'novaclient': {
                 'handlers': ['console'],
                 'propagate': False,
             },
             'keystoneclient': {
+                'handlers': ['console'],
+                'propagate': False,
+            },
+            'glanceclient': {
                 'handlers': ['console'],
                 'propagate': False,
             },
