--- a/horizon/dashboards/settings/templates/settings/ec2/ec2rc.sh.template
+++ b/horizon/dashboards/settings/templates/settings/ec2/ec2rc.sh.template
@@ -10,5 +10,6 @@ export EC2_PRIVATE_KEY=${NOVA_KEY_DIR}/pk.pem
 export EC2_CERT=${NOVA_KEY_DIR}/cert.pem
 export NOVA_CERT=${NOVA_KEY_DIR}/cacert.pem
 export EUCALYPTUS_CERT=${NOVA_CERT} # euca-bundle-image seems to require this set
+{% if s3_endpoint %}export S3_URL={{ s3_endpoint }}{% endif %}
 alias ec2-bundle-image="ec2-bundle-image --cert ${EC2_CERT} --privatekey ${EC2_PRIVATE_KEY} --user 42 --ec2cert ${NOVA_CERT}"
 alias ec2-upload-bundle="ec2-upload-bundle -a ${EC2_ACCESS_KEY} -s ${EC2_SECRET_KEY} --url ${S3_URL} --ec2cert ${NOVA_CERT}"
