Updating Horizon to use LESS.
This changes all of the Bootstrap CSS and Horizon
CSS to use LESS. Horizon's specific CSS will be
organized into separate files in another commit,
as it is outside the scope of this BP.

We are also now packing LESS 1.3.0 directly within
Horizon.

Implementation of Blueprint transition-to-lesscss

Change-Id: Ie4be8b28ab3ce04ea21d7d5cd49c2ccb66bd8ade

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .selenium_log
 .coverage*
 .noseids
+.DS_STORE
 coverage.xml
 nosetests.xml
 pep8.txt
@@ -13,6 +14,7 @@ horizon.egg-info
 openstack_dashboard/local/local_settings.py
 docs/build/
 docs/source/sourcecode
+/static/
 .venv
 .tox
 build
