Add ProjectTestingInterface to horizon.
Horizon is the last project that doesn't have support for the common
Project Testing Interface. This gets horizon up to speed with the
other bits, but shouldn't break any of the existing interfaces.

Change-Id: I464c3b10d9708a0b7b5ffd42c88cd3cf515ef6a7

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .coverage*
 .noseids
 coverage.xml
+nosetests.xml
 pep8.txt
 pylint.txt
 reports
@@ -13,5 +14,8 @@ openstack_dashboard/local/local_settings.py
 docs/build/
 docs/source/sourcecode
 .venv
+.tox
 build
 dist
+AUTHORS
+ChangeLog
