Move docs to doc.
To better facilitate the building and publishing of sphinx
documentation by Jenkins we are moving all openstack projects with
sphinx documentation to a common doc tree structure. Documentation
goes in project/doc and build results go in project/doc/build.

Change-Id: Ic523a716e4113198b777d6dc3db8bb8a729e7696

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ pylint.txt
 reports
 horizon.egg-info
 openstack_dashboard/local/local_settings.py
-docs/build/
-docs/source/sourcecode
+doc/build/
+doc/source/sourcecode
 /static/
 .venv
 .tox
