Adding the bin dir and lessc binary to the manifest file.
Change-Id: I5abfc72714e24aa6a30adcd335be3fd085cdfe79

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+recursive-include bin *.js
 recursive-include doc *.py *.rst *.css *.js *.html *.conf *.jpg *.gif *.png *.css_t
 recursive-include horizon *.html *.css *.js *.csv *.template *.tmpl *.mo *.po
 recursive-include openstack_dashboard *.html *.js *.css *.less *.csv *.template *.mo *.po *.example *.eot *.svg *.ttf *.woff *.png *.gif *.ico *.wsgi
@@ -10,6 +11,7 @@ include Makefile
 include manage.py
 include README.rst
 include run_tests.sh
+include bin/less/lessc
 include doc/Makefile
 include doc/source/_templates/.placeholder
 include tools/pip-requires
