Make TIME_ZONE a local settings with a sane default.
Change-Id: Ib441d3ca0e2f0d70eb6fd372e42c363be1090511

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -71,6 +71,10 @@ OPENSTACK_KEYSTONE_BACKEND = {
 # providing a paging element (a "more" link) to paginate results.
 API_RESULT_LIMIT = 1000
 
+# The timezone of the server. This should correspond with the timezone
+# of your entire OpenStack installation, and hopefully be in UTC.
+TIME_ZONE = "UTC"
+
 LOGGING = {
         'version': 1,
         # When set to True this will disable all logging except
