Fixed the bug with images returned as generator
After a fix in Glance to support pagination,
the list of images is returned as generator,
while api.glance expects a list.

PATCHSET 2: removed optional kwargs if None
PATCHSET 3: fixed snapshot_list_detailed.

Fixed bug 1027210

Change-Id: I1c68e3625c22e591776e83c742e7b94dc893f196

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -76,9 +76,11 @@ OPENSTACK_KEYSTONE_BACKEND = {
 # external to the OpenStack environment. The default is 'internalURL'.
 #OPENSTACK_ENDPOINT_TYPE = "publicURL"
 
-# The number of Swift containers and objects to display on a single page before
-# providing a paging element (a "more" link) to paginate results.
+# The number of objects (Swift containers/objects or images) to display
+# on a single page before providing a paging element (a "more" link)
+# to paginate results.
 API_RESULT_LIMIT = 1000
+API_RESULT_PAGE_SIZE = 20
 
 # The timezone of the server. This should correspond with the timezone
 # of your entire OpenStack installation, and hopefully be in UTC.
