Allow control of whether a user can specify a volume mount point.
Since some hypervisors don't support this feature, it makes the
field in the attach form extremely misleading.

Change-Id: I875c63d35b22b6b73314e001dbc1fbdce4363e25

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -74,6 +74,10 @@ OPENSTACK_KEYSTONE_BACKEND = {
     'can_edit_user': True
 }
 
+OPENSTACK_HYPERVISOR_FEATURES = {
+    'can_set_mount_point': True
+}
+
 # OPENSTACK_ENDPOINT_TYPE specifies the endpoint type to use for the endpoints
 # in the Keystone service catalog. Use this setting when Horizon is running
 # external to the OpenStack environment. The default is 'internalURL'.
