Adds an option for linking to external help docs.
Change-Id: Iea9ab299078f8552f53ca747f48e30a0b049bd06

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -17,7 +17,8 @@ TEMPLATE_DEBUG = DEBUG
 #     "password_validator": {
 #         "regex": '.*',
 #         "help_text": _("Your password does not meet the requirements.")
-#     }
+#     },
+#    'help_url': "http://docs.openstack.org"
 # }
 
 LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
