--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 recursive-include bin *.js
 recursive-include doc *.py *.rst *.css *.js *.html *.conf *.jpg *.gif *.png *.css_t
 recursive-include horizon *.html *.css *.js *.csv *.template *.tmpl *.mo *.po
-recursive-include openstack_dashboard *.html *.js *.less *.mo *.po *.example *.eot *.svg *.ttf *.woff *.png *.ico *.wsgi
+recursive-include openstack_dashboard *.html *.js *.less *.mo *.po *.example *.eot *.svg *.ttf *.woff *.png *.ico *.wsgi *.gif
 recursive-include tools *.py *.sh
 
 include AUTHORS
@@ -9,8 +9,10 @@ include ChangeLog
 include LICENSE
 include Makefile
 include manage.py
+include openstack-common.conf
 include README.rst
 include run_tests.sh
+include tox.ini
 include bin/less/lessc
 include doc/Makefile
 include doc/source/_templates/.placeholder
