--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -37,7 +37,7 @@ LOCAL_PATH = os.path.dirname(os.path.abspath(__file__))
 
 # We recommend you use memcached for development; otherwise after every reload
 # of the django development server, you will have to login again. To use
-# memcached set CACHE_BACKED to something like 'memcached://127.0.0.1:11211/'
+# memcached set CACHE_BACKEND to something like 'memcached://127.0.0.1:11211/'
 CACHE_BACKEND = 'locmem://'
 
 # Send email to the console by default
