--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,14 @@ basepython = python2.7
 commands = pip install django==1.4
            /bin/bash run_tests.sh -N --no-pep8
 
+[testenv:py27integration]
+basepython = python2.7
+commands = /bin/bash run_tests.sh -N --integration
+
+[testenv:py26integration]
+basepython = python2.6
+commands = /bin/bash run_tests.sh -N --integration
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
