blueprint quantum-lbaas
This implements the UI for quantum lbaas. Add/Delete Pool, Vip, Member,
PoolMonitor for lbaas is implemented.

Expected future extensions:
1. Update Vip/Pool/Member
2. Use of floating IP as VIP

Change-Id: Icde452b97a5e02d2381b996350b13aba3d87bb8e

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -104,6 +104,13 @@ OPENSTACK_HYPERVISOR_FEATURES = {
     'can_encrypt_volumes': False
 }
 
+# The OPENSTACK_QUANTUM_NETWORK settings can be used to enable optional
+# services provided by quantum.  Currently only the load balancer service
+# is available.
+OPENSTACK_QUANTUM_NETWORK = {
+    'enable_lb': True
+}
+
 # OPENSTACK_ENDPOINT_TYPE specifies the endpoint type to use for the endpoints
 # in the Keystone service catalog. Use this setting when Horizon is running
 # external to the OpenStack environment. The default is 'internalURL'.
