Properly enable/disable project/user edit via setting.
For identity backends which don't support editing (LDAP, et. al.)
we already have a setting that turns off user editing, but it was
applied inconsistently. This patch applies it more thoroughly
and adds the same functionality for projects.

Fixes bug 1109019.

Change-Id: Ia1316de4ff76779b93edd1c1f364ede9aabb6fd0

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -87,7 +87,8 @@ OPENSTACK_KEYSTONE_DEFAULT_ROLE = "Member"
 # TODO(tres): Remove these once Keystone has an API to identify auth backend.
 OPENSTACK_KEYSTONE_BACKEND = {
     'name': 'native',
-    'can_edit_user': True
+    'can_edit_user': True,
+    'can_edit_project': True
 }
 
 OPENSTACK_HYPERVISOR_FEATURES = {
